<resources>
    <string name="app_name">SegProject2019</string>

    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="not_registered">Not registered?</string>
    <string name="Register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_registered">Already registered?</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_closd">Close navigation drawer</string>
    <string-array name="roles">
        <item>doctor</item>
        <item>nurse</item>
        <item>staff</item>
    </string-array>
</resources>
