<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_Activity"
    android:orientation="vertical"
    android:gravity="center_horizontal">


    <EditText
        android:id="@+id/editText_email"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="300dp"
        android:background="#ffffff"
        android:hint="Email"/>

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:hint="@string/password"/>
    
    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="#03F8AB"
        android:layout_marginTop="20dp"
        android:text="@string/login"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/not_registered"/>

        <TextView
            android:id="@+id/TextViewRegister"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="20dp"
            android:textStyle="bold"
            android:text="@string/Register"/>


    </LinearLayout>




</LinearLayout>